# Conditions-copilot

./: README.md  pyproject.toml  requirements.txt  temp_gui_qt_view.txt  test_llm.py
docs/: PHASED_IMPLEMENTATION_PLAN.md  SESSION_NOTES.md
examples/: openai_diag.py  sample_reactions.py
examples/datasets/: demo_neighbors.csv
examples/dicts_example/: README.md  additives.json  bases.json  catalysts.json  ligands.json  solvents.json
src/conditions_copilot/: cli.py  controller.py  gui_qt.py  schemas.py
src/conditions_copilot/llm_prompting/: client.py
src/conditions_copilot/tools/: featurize_basic.py  ml.py  precompute_fps.py  retrieval.py
